# aoc

./: .gitignore  Makefile  README.md  pyproject.toml  utils.py  utils.sh
aoc_2022/day01/: part01.py  part02.py
aoc_2022/day02/: part01.py  part02.py
aoc_2022/day03/: part01.py  part02.py
aoc_2022/day04/: part01.py  part02.py
aoc_2022/day05/: part01.py  part02.py
aoc_2022/day06/: part01.py  part02.py
aoc_2022/day07/: part01.py  part02.py
aoc_2022/day08/: part01.py  part02.py
aoc_2022/day09/: part01.py  part02.py
aoc_2022/dayXX/: part01.py
aoc_2023/: Cargo.toml
aoc_2023/src/: day1.rs  day10.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs  template.rs
aoc_2024/: Cargo.toml  template
aoc_2024/src/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  solve.rs
aoc_2025/src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  main.rs
